# MiniC-Compiler

./: CMakeLists.txt  MiniC文法.md  ast.c  ast.h  lex.l  main.c  parser.y  test.txt
